tests/fail/src/tester.c
/**
 * SECTION:tester_nolongdesc
 * @short_description: module for gtk-doc unit test
 */
/**
 * SECTION:tester_noshortdesc
 *
 * This file contains non-sense code for the sole purpose of testing the docs.
 */

#include <glib.h>

#include "tester.h"


